--- a/__workshop/exercise-files/style.css
+++ b/__workshop/exercise-files/style.css
@@ -1,1 +1,99 @@
 /* add css here */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    font-family: "Jost";
+  }
+
+  h1{
+      font-weight: 900;
+      font-size: 50px;
+      margin-bottom: 40px;
+      text-align: center;
+  }
+
+  
+
+  input{
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    margin-left: 20px;
+    width: 250px;
+   
+  }
+
+  label{
+      font-size: 20px;
+  }
+
+
+  .wrapper{
+      margin: auto;
+      padding: 24px;
+      max-width: 475px;
+      margin-top: 32px;
+      border-radius: 16px;
+      box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02), 0 6.7px 5.3px rgba(0, 0, 0, 0.028),
+            0 12.5px 10px rgba(0, 0, 0, 0.035), 0 22.3px 17.9px rgba(0, 0, 0, 0.042),
+            0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
+  }
+
+  .center{
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px 0px 10px 0px;
+    
+  
+  }
+
+  .terms{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f2f2f2;
+      padding: 10px;
+      border-radius: 5px;
+  }
+
+  #agree{
+      width: 30px;
+   
+    }
+
+    #error_msg{
+        text-align: center;
+        display: none;
+        padding: 10px;
+        background-color: pink;
+        font-size: 15px;
+        border-radius: 5px;
+        margin-bottom: 10px;
+    }
+   
+  .buttons{
+      display: flex;
+      justify-content: space-around;
+  }
+
+  #clear{
+      margin-top: 20px;
+      border-radius: 5px;
+      padding: 10px 30px 10px 30px;
+      background-color: hsl(333deg, 100%, 44%);
+      color: white;
+      font-size: 20px;
+  }
+
+  #submit{
+      margin-top: 20px;
+    border-radius: 5px;
+    padding: 10px 30px 10px 30px;
+    background-color: hsl(256deg, 100%, 44%);
+    color: white;
+    font-size: 20px;
+  }
